--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -1,14 +1,10 @@
-<!DOCTYPE HTML>
-<html>
-<head>
-    <title>Spring Boot WebService</title>
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
-
-</head>
-<body>
-    <h1>스프링 부트로 시작하는 웹서비스</h1>
-</body>
-
-
-
-</html>
+{{>layout/header}}
+    <h1>스프링 부트로 시작하는 웹서비스 Ver.2</h1>
+    <div class="col-md-12">
+        <div class="row">
+            <div class=""col-md-6">
+                <a href="/posts/save" role="button" class=""btn btn-primary">글 등록 </a>
+             </div>
+        </div>
+    </div>
+{{>layout/footer}}
